# CuriosityEclipse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml
autopilot/: Cargo.toml  __init__.py
autopilot/src/: autopilot.py  autopilot.rs  constants.py  main.rs  point.rs  vector.rs
data/: main.ipynb  out.csv
logger/: __init__.py
logger/src/: csv_logger_impl.py  ksp_data_repository.py  logger_interface.py
math_model/: __init__.py
math_model/src/: constants.py  dif_equation_solver.py  graph_generator.py  graph_ode.py  ode_solver_phase2.py  ode_solver_phase3.py  utils.py
shared/: constructor_locker.py  debugger.py  krpc_client.py  point.py  singleton.py  vector.py
