[tool.poetry]
name = "curiosityeclipse"
version = "0.1.0"
description = ""
authors = [
    "Nhsdkk",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
krpc = "^0.5.3"
numpy = "^1.26.2"
numba = "^0.58.1"
scipy = "^1.11.3"
sympy = "^1.12"
matplotlib = "^3.8.1"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.5.0"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"
pycodestyle = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
